--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -11,6 +12,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: white;
+  font-family: 'Montserrat', sans-serif;
 }
 
 @layer components {
